[Args] Declare common tools, common and jvm args in arguments DSL