@@ -5,15 +5,15 @@
 
 package org.jetbrains.kotlin.arguments.description
 
-import org.jetbrains.kotlin.arguments.KotlinReleaseVersion
 import org.jetbrains.kotlin.arguments.asReleaseDependent
 import org.jetbrains.kotlin.arguments.compilerArgumentsLevel
+import org.jetbrains.kotlin.arguments.defaultFalse
+import org.jetbrains.kotlin.arguments.defaultNull
+import org.jetbrains.kotlin.arguments.stubLifecycle
+import org.jetbrains.kotlin.arguments.types.BooleanType
 import org.jetbrains.kotlin.arguments.types.KotlinJvmTargetType
-
-/*
- * Copyright 2010-2025 JetBrains s.r.o. and Kotlin Programming Language contributors.
- * Use of this source code is governed by the Apache 2.0 license that can be found in the license/LICENSE.txt file.
- */
+import org.jetbrains.kotlin.arguments.types.StringArrayType
+import org.jetbrains.kotlin.arguments.types.StringType
 
 val actualJvmCompilerArguments by compilerArgumentsLevel(Levels.jvmCompilerArguments) {
     compilerArgument {
@@ -23,8 +23,682 @@ val actualJvmCompilerArguments by compilerArgumentsLevel(Levels.jvmCompilerArgum
         valueType = KotlinJvmTargetType()
         valueDescription = "<version>".asReleaseDependent()
 
-        lifecycle(
-            introducedVersion = KotlinReleaseVersion.v1_4_0
-        )
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "d"
+        description = "Destination for generated class files.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<directory|jar>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "classpath"
+        description = "List of directories and JAR/ZIP archives to search for user class files.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "include-runtime"
+        description = "Include the Kotlin runtime in the resulting JAR.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "jdk-home"
+        description = "Include a custom JDK from the specified location in the classpath instead of the default 'JAVA_HOME'.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "no-jdk"
+        description = "Don't automatically include the Java runtime in the classpath.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "no-stdlib"
+        description = "Don't automatically include the Kotlin/JVM stdlib and Kotlin reflection dependencies in the classpath.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "no-reflect"
+        description = "Don't automatically include the Kotlin reflection dependency in the classpath.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "expression"
+        description = "Evaluate the given string as a Kotlin script.".asReleaseDependent()
+        valueType = StringType.defaultNull
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "script-templates"
+        description = "Script definition template classes.".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<fully qualified class name[,]>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "module-name"
+        description = "Name of the generated '.kotlin_module' file.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<name>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "java-parameters"
+        description = "Generate metadata for Java 1.8 reflection on method parameters.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "jvm-default"
+        description = """Emit JVM default methods for interface declarations with bodies. The default is 'enable'.
+-jvm-default=enable              Generate default methods for non-abstract interface declarations, as well as 'DefaultImpls' classes with
+                                 static methods for compatibility with code compiled in the 'disable' mode.
+                                 This is the default behavior since language version 2.2.
+-jvm-default=no-compatibility    Generate default methods for non-abstract interface declarations. Do not generate 'DefaultImpls' classes.
+-jvm-default=disable             Do not generate JVM default methods. This is the default behavior up to language version 2.1.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{enable|no-compatibility|disable}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    // Advanced options
+
+    compilerArgument {
+        name = "Xallow-unstable-dependencies"
+        description = "Do not report errors on classes in dependencies that were compiled by an unstable version of the Kotlin compiler.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xabi-stability"
+        description = """When using unstable compiler features such as FIR, use 'stable' to mark generated class files as stable
+to prevent diagnostics from being reported when using stable compilers at the call site.
+When using the JVM IR backend, conversely, use 'unstable' to mark generated class files as unstable
+to force diagnostics to be reported.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{stable|unstable}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xir-do-not-clear-binding-context"
+        description = "When using the IR backend, do not clear BindingContext between 'psi2ir' and lowerings.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xbackend-threads"
+        description = """Run codegen phase in N parallel threads.
+0 means use one thread per processor core.
+The default value is 1.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<N>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xmodule-path"
+        description = "Paths to Java 9+ modules.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xadd-modules"
+        description = "Root modules to resolve in addition to the initial modules, or all modules on the module path if <module> is ALL-MODULE-PATH.".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<module[,]>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-call-assertions"
+        description = "Don't generate not-null assertions for arguments of platform types.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-receiver-assertions"
+        description = "Don't generate not-null assertions for extension receiver arguments of platform types.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-param-assertions"
+        description = "Don't generate not-null assertions on parameters of methods accessible from Java.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-optimize"
+        description = "Disable optimizations.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xassertions"
+        description = """'kotlin.assert' call behavior:
+-Xassertions=always-enable:  enable, ignore JVM assertion settings;
+-Xassertions=always-disable: disable, ignore JVM assertion settings;
+-Xassertions=jvm:            enable, depend on JVM assertion settings;
+-Xassertions=legacy:         calculate the condition on each call, the behavior depends on JVM assertion settings in the kotlin package;
+default: legacy""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{always-enable|always-disable|jvm|legacy}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xbuild-file"
+        description = "Path to the .xml build file to compile.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xmultifile-parts-inherit"
+        description = "Compile multifile classes as a hierarchy of parts and a facade.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-type-table"
+        description = "Use a type table in metadata serialization.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-old-class-files-reading"
+        description = """Use the old implementation for reading class files. This may slow down the compilation and cause problems with Groovy interop.
+This can be used in the event of problems with the new implementation.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-fast-jar-file-system"
+        description = "Use the fast implementation of Jar FS. This may speed up compilation time, but it is experimental.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xsuppress-missing-builtins-error"
+        description = """Suppress the "cannot access built-in declaration" error (useful with '-no-stdlib').""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xscript-resolver-environment"
+        description = "Set the script resolver environment in key-value pairs (the value can be quoted and escaped).".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<key=value[,]>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    // Javac options
+
+    compilerArgument {
+        name = "Xuse-javac"
+        description = "Use javac for Java source and class file analysis.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xcompile-java"
+        description = "Reuse 'javac' analysis and compile Java source files.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjavac-arguments"
+        description = "Java compiler arguments.".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<option[,]>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjava-source-roots"
+        description = "Paths to directories with Java source files.".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjava-package-prefix"
+        description = "Package prefix for Java files.".asReleaseDependent()
+        valueType = StringType.defaultNull
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjsr305"
+        description = """Specify the behavior of 'JSR-305' nullability annotations:
+-Xjsr305={ignore/strict/warn}                   global (all non-@UnderMigration annotations)
+-Xjsr305=under-migration:{ignore/strict/warn}   all @UnderMigration annotations
+-Xjsr305=@<fq.name>:{ignore/strict/warn}        annotation with the given fully qualified class name
+Modes:
+* ignore
+* strict (experimental; treat like other supported nullability annotations)
+* warn (report a warning)""".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "{ignore/strict/warn}|under-migration:{ignore/strict/warn}|@<fq.name>:{ignore/strict/warn}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xnullability-annotations"
+        description = """Specify the behavior for specific Java nullability annotations (provided with fully qualified package name).
+Modes:
+* ignore
+* strict
+* warn (report a warning)""".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "@<fq.name>:{ignore/strict/warn}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xsupport-compatqual-checker-framework-annotations"
+        description = """Specify the behavior for Checker Framework 'compatqual' annotations ('NullableDecl'/'NonNullDecl').
+The default value is 'enable'.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "enable|disable".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjspecify-annotations"
+        description = """Specify the behavior of 'jspecify' annotations.
+The default value is 'warn'.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "ignore|strict|warn".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjvm-default"
+        description = """This option is deprecated. Migrate to -jvm-default as follows:
+-Xjvm-default=disable            -> -jvm-default=disable
+-Xjvm-default=all-compatibility  -> -jvm-default=enable
+-Xjvm-default=all                -> -jvm-default=no-compatibility""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{all|all-compatibility|disable}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xdefault-script-extension"
+        description = "Compile expressions and unrecognized scripts passed with the -script argument as scripts with the given filename extension.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<script filename extension>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xdisable-standard-script"
+        description = "Disable standard Kotlin scripting support.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xgenerate-strict-metadata-version"
+        description = "Generate metadata with strict version semantics (see the KDoc entry on 'Metadata.extraInt').".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xsanitize-parentheses"
+        description = """Transform '(' and ')' in method names to some other character sequence.
+This mode can BREAK BINARY COMPATIBILITY and should only be used as a workaround for
+problems with parentheses in identifiers on certain platforms.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xfriend-paths"
+        description = "Paths to output directories for friend modules (modules whose internals should be visible).".asReleaseDependent()
+        valueType = StringArrayType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xallow-no-source-files"
+        description = "Allow the set of source files to be empty.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xemit-jvm-type-annotations"
+        description = "Emit JVM type annotations in bytecode.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xstring-concat"
+        description = """Select the code generation scheme for string concatenation:
+-Xstring-concat=indy-with-constants  Concatenate strings using 'invokedynamic' and 'makeConcatWithConstants'. This requires '-jvm-target 9' or greater.
+-Xstring-concat=indy                 Concatenate strings using 'invokedynamic' and 'makeConcat'. This requires '-jvm-target 9' or greater.
+-Xstring-concat=inline               Concatenate strings using 'StringBuilder'
+default: 'indy-with-constants' for JVM targets 9 or greater, 'inline' otherwise.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{indy-with-constants|indy|inline}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjdk-release"
+        description = """Compile against the specified JDK API version, similarly to javac's '-release'. This requires JDK 9 or newer.
+The supported versions depend on the JDK used; for JDK 17+, the supported versions are 8, 9, 11, 17, 21.
+This also sets the value of '-jvm-target' to be equal to the selected JDK version.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<version>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xsam-conversions"
+        description = """Select the code generation scheme for SAM conversions.
+-Xsam-conversions=indy          Generate SAM conversions using 'invokedynamic' with 'LambdaMetafactory.metafactory'.
+-Xsam-conversions=class         Generate SAM conversions as explicit classes.
+The default value is 'indy'.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{class|indy}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xlambdas"
+        description = """Select the code generation scheme for lambdas.
+-Xlambdas=indy                  Generate lambdas using 'invokedynamic' with 'LambdaMetafactory.metafactory'.
+                                A lambda object created using 'LambdaMetafactory.metafactory' will have a different 'toString()'.
+-Xlambdas=class                 Generate lambdas as explicit classes.
+The default value is 'indy' if language version is 2.0+, and 'class' otherwise.""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{class|indy}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xklib"
+        description = "Paths to cross-platform libraries in the .klib format.".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<path>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-reset-jar-timestamps"
+        description = "Don't reset jar entry timestamps to a fixed date.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-unified-null-checks"
+        description = "Use pre-1.4 exception types instead of 'java.lang.NPE' in null checks. See KT-22275 for more details.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-source-debug-extension"
+        description = "Don't generate the '@kotlin.jvm.internal.SourceDebugExtension' annotation with an SMAP copy on classes.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xprofile"
+        description = """Debug option: Run the compiler with the async profiler and save snapshots to `outputDir`; `command` is passed to the async profiler on start.
+`profilerPath` is the path to libasyncProfiler.so; async-profiler.jar should be on the compiler classpath.
+If it's not on the classpath, the compiler will attempt to load async-profiler.jar from the containing directory of profilerPath.
+Example: -Xprofile=<PATH_TO_ASYNC_PROFILER>/async-profiler/build/libasyncProfiler.so:event=cpu,interval=1ms,threads,start:<SNAPSHOT_DIR_PATH>""".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "<profilerPath:command:outputDir>".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-14-inline-classes-mangling-scheme"
+        description = "Use the scheme for inline class mangling from version 1.4 instead of the one from 1.4.30.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xjvm-enable-preview"
+        description = """Allow using Java features that are in the preview phase.
+This works like '--enable-preview' in Java. All class files are marked as compiled with preview features, meaning it won't be possible to use them in release environments.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xsuppress-deprecated-jvm-target-warning"
+        description = """Suppress warnings about deprecated JVM target versions.
+This option has no effect and will be deleted in a future version.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xtype-enhancement-improvements-strict-mode"
+        description = """Enable strict mode for improvements to type enhancement for loaded Java types based on nullability annotations,
+including the ability to read type-use annotations from class files.
+See KT-45671 for more details.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xserialize-ir"
+        description = "Save the IR to metadata (Experimental).".asReleaseDependent()
+        valueType = StringType.defaultNull
+        valueDescription = "{none|inline|all}".asReleaseDependent()
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xvalidate-bytecode"
+        description = "Validate generated JVM bytecode before and after optimizations.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xenhance-type-parameter-types-to-def-not-null"
+        description = "Enhance not-null-annotated type parameter types to definitely-non-nullable types ('@NotNull T' => 'T & Any').".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xlink-via-signatures"
+        description = """Link JVM IR symbols via signatures instead of descriptors.
+This mode is slower, but it can be useful for troubleshooting problems with the JVM IR backend.
+This option is deprecated and will be deleted in future versions.
+It has no effect when -language-version is 2.0 or higher.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xdebug"
+        description = """Enable debug mode for compilation.
+Currently this includes spilling all variables in a suspending context regardless of whether they are alive.
+If API Level >= 2.2 -- no-op.""".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xno-new-java-annotation-targets"
+        description = "Don't generate Java 1.8+ targets for Kotlin annotation classes.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xvalue-classes"
+        description = "Enable experimental value classes.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xir-inliner"
+        description = "Inline functions using the IR inliner instead of the bytecode inliner.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-inline-scopes-numbers"
+        description = "Use inline scopes numbers for inline marker variables.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xuse-k2-kapt"
+        description = "Enable the experimental support for K2 KAPT.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xcompile-builtins-as-part-of-stdlib"
+        description = "Enable behaviour needed to compile builtins as part of JVM stdlib".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xoutput-builtins-metadata"
+        description = "Output builtins metadata as .kotlin_builtins files".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
+    }
+
+    compilerArgument {
+        name = "Xannotations-in-metadata"
+        description = "Write annotations on declarations into the metadata (in addition to the JVM bytecode), and read annotations from the metadata if they are present.".asReleaseDependent()
+        valueType = BooleanType.defaultFalse
+
+        stubLifecycle()
     }
 }
